# magic_enum-example

./: .clang-tidy  CMakeLists.txt  README.md
test/: CMakeLists.txt  basic.cpp  containers.cpp  flags.cpp  for_each.cpp  fusion.cpp  iostream.cpp  minimum.cpp  sample_enums.h  switch.cpp
tool/cmake/: install_magic_enum.cmake  install_magick_enum.cmake
